--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				</div>
 				<div class="col-md-4 hovereffect"> <!--third container for map thumbnail-->
 					<a href="projectpages/InternetUse.html" class="thumbnail">
-						<img src="img/InternetThumb.png" alt=" ">
+						<img src="img/InternetThumb.PNG" alt=" ">
 						<div class="overlay">
 								<div class="text">History of Internet Use</div>
 							</div>
@@ -103,7 +103,7 @@
 				</div>
 				<div class="col-md-4 hovereffect"> <!--third container for map thumbnail-->
 					<a href="projectpages/BiodiversityAtlas.html" class="thumbnail">
-						<img src="img/BiodiversityThumb.png" alt=" ">
+						<img src="img/BiodiversityThumb.PNG" alt=" ">
 						<div class="overlay">
 					    	<div class="text">World Biodiversity Atlas</div>
 					  	</div>
