Updates, Moon Map

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div class="header">
 			<div class="container">
 				<h1 class="intro"><a href="index.html">Andrea Eibergen</a></h1>
-				<p class="intro">Cartographer | Geographer | Yogurt Enthusiast</p>
+				<p class="intro">Cartographer | Geographer | Outdoor Enthusiast</p>
 			</div>
 		</div>
 
@@ -67,14 +67,15 @@
 						  </div>
 					</a>
 				</div>
-				<div class="col-md-4 hovereffect"> <!--second container for map thumbnail-->
-					<a href="projectpages/ScandinaviaBikeTour.html" class="thumbnail">
-						<img src="img/ScandinaviaThumb.png" alt=" ">
-						<div class="overlay">
-					    	<div class="text">Scandinavian Bike Tour Map</div>
-					  </div>
+				<div class="col-md-4 hovereffect"> <!--first container for map thumbnail-->
+					<a href="projectpages/MoonMap.html" class="thumbnail">
+						<img src="img/MoonMap.png" class="img-fluid"  alt=" ">
+						  <div class="overlay">
+						    <div class="text">The Moon</div>
+						  </div>
 					</a>
 				</div>
+
 				<div class="col-md-4 hovereffect"> <!--third container for map thumbnail-->
 					<a href="projectpages/AlaskaInfographic.html" class="thumbnail">
 						<img src="img/AlaskaThumb.png" alt=" ">
@@ -85,6 +86,14 @@
 				</div>
 			</div>
 			<div class="row">
+				<div class="col-md-4 hovereffect"> <!--second container for map thumbnail-->
+					<a href="projectpages/ScandinaviaBikeTour.html" class="thumbnail">
+						<img src="img/ScandinaviaThumb.png" alt=" ">
+						<div class="overlay">
+					    	<div class="text">Scandinavian Bike Tour</div>
+					  </div>
+					</a>
+				</div>
 				<div class="col-md-4 hovereffect"> <!--third container for map thumbnail-->
 					<a href="projectpages/UnhealthyUS.html" class="thumbnail">
 						<img src="img/HealthThumb.png" alt=" ">
@@ -101,6 +110,8 @@
 							</div>
 					</a>
 				</div>
+			</div>
+			<div class="row">
 				<div class="col-md-4 hovereffect"> <!--third container for map thumbnail-->
 					<a href="projectpages/BiodiversityAtlas.html" class="thumbnail">
 						<img src="img/BiodiversityThumb.PNG" alt=" ">
@@ -109,8 +120,6 @@
 					  	</div>
 					</a>
 				</div>
-			</div>
-			<div class="row">
 				<div class="col-md-4 hovereffect"> <!--third container for map thumbnail-->
 					<a href="projectpages/TurkeyProduction.html" class="thumbnail">
 						<img src="img/TurkeyThumb.png" alt=" ">
