--- a/projectpages/MoonMap.html
+++ b/projectpages/MoonMap.html
@@ -7,7 +7,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<title>Turkey Production</title>
+		<title>Lunar Map</title>
 
 		<!--put your external stylesheet links here-->
 		<link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -52,45 +52,47 @@
 			</div> <!-- end .container -->
 		</nav> <!-- end navigation bar -->
 
-		<div class="container">
+    <!--thumbnails start here-->
+    <div class="container">
 	    <div class="col-md-10 main">
-	    	<h2>Turkey Production in the US</h2>
-	    	<p> While gobbling up a plate of leftover turkey over after one Thanksgiving break, I began wondering where all this turkey came from. I found the answer via this visualization of turkey production in the United States.</p>
-	    	<img src="../img/turkeywip.png" alt="Turkey Production" class="img-responsive center">
-	    	<h3>View full map <a target="_blank" href="../img/turkeywip.png">here</a></h3>
+	    	<h2>Moon Map</h2>
+	    	<p>I used this map as a means of exploring multiple styles within the same map. To begin, I created custom Tanaka contour lines and contour shading. Further, it is informed stylistically by the Georgian and Regency periods. The labelling reflects both the given name of each geographic feature as well as the inspiration behind the name - scientests, benefactors, and scholars. </p>
+	    	<img src="../img/MoonFinal.png" alt=" " class="img-responsive center">
+	    	<h3>View full map <a target="_blank" href="../img/MoonFinal.png">here</a></h3>
 	    </div>
 	</div>
+    <!--thumbnails end here-->
 
-	<!--Footer-->
-	<footer class="page-footer">
-	    <!--Footer Links-->
-	    <div class="container-fluid">
-	        <div class="row">
-	            <!--First column-->
-	            <div class="col-md-6">
-	                <h3 class="blues">Contact me:</h3>
-									<div class="foot">
-									<h4 class="blues">
-										<strong>Email:</strong>
-										 aeibergen@wisc.edu
-									</h4>
-									<h4 class="blues">
-										<strong>GitHub:</strong>
-										 aeibergen
-									</h4>
-								</div>
-	            </div>
-	            <!--/.First column-->
-	        </div>
-	    </div>
-	    <!--/.Footer Links-->
-	</footer>
-	<!--/.Footer-->
+		<!--Footer-->
+		<footer class="page-footer">
+		    <!--Footer Links-->
+		    <div class="container-fluid">
+		        <div class="row">
+		            <!--First column-->
+		            <div class="col-md-6">
+		                <h3 class="blues">Contact me:</h3>
+										<div class="foot">
+										<h4 class="blues">
+											<strong>Email:</strong>
+											 aeibergen@wisc.edu
+										</h4>
+										<h4 class="blues">
+											<strong>GitHub:</strong>
+											 aeibergen
+										</h4>
+									</div>
+		            </div>
+		            <!--/.First column-->
+		        </div>
+		    </div>
+		    <!--/.Footer Links-->
+		</footer>
+		<!--/.Footer-->
 
 
 		<!--put your external script links here-->
-    <script type="text/javascript" src="../lib/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="../lib/bootstrap.js"></script>
-    <script type="text/javascript" src="../js/main.js"></script>
+		<script type="text/javascript" src="../lib/jquery-3.2.1.min.js"></script>
+		<script type="text/javascript" src="../lib/bootstrap.js"></script>
+		<script type="text/javascript" src="../js/main.js"></script>
 	</body>
 </html>
