--- a/aboutme.html
+++ b/aboutme.html
@@ -24,7 +24,7 @@
 		<div class="header">
 			<div class="container">
 				<h1 class="intro"><a href="index.html">Andrea Eibergen</a></h1>
-				<p class="intro">Cartographer | Geographer | Yogurt Enthusiast</p>
+				<p class="intro">Cartographer | Geographer | Outdoor Enthusiast</p>
 			</div>
 		</div>
 
@@ -58,7 +58,7 @@
 				</div>
 				<div class="col-md-6">
 					<h3 id="itme">Hi, I’m Andrea!</h3>
-					<p>I am an undergraduate student at the University of Wisconsin - Madison majoring in Cartography and GIS, Geography, and Environmental Studies. I am currently a GIS Developer at the Wisconsin State Cartographer’s Office. When I am not studying or working, I enjoy hiking, reading, cooking, and taking road trips. I love all things mapping and map-related.
+					<p>I am an undergraduate student at the University of Wisconsin - Madison majoring in Cartography and GIS, Geography, and Environmental Studies. I am currently a student GIS Developer at the Wisconsin State Cartographer’s Office. When I am not studying or working, I enjoy hiking, reading, cooking, and taking road trips. I love all things mapping and map-related.
 					</p>
 				</div>
 		</div>
