--- a/projectpages/UnhealthyUS.html
+++ b/projectpages/UnhealthyUS.html
@@ -24,7 +24,7 @@
 		<div class="header">
 			<div class="container">
 				<h1 class="intro"><a href="../index.html">Andrea Eibergen</a></h1>
-				<p class="intro">Cartographer | Geographer | Yogurt Enthusiast</p>
+				<p class="intro">Cartographer | Geographer | Outdoor Enthusiast</p>
 			</div>
 		</div>
 
