--- a/resume.html
+++ b/resume.html
@@ -79,7 +79,7 @@
 					</div>
 					<h3 class="resume"><b>Skills</b></h3>
 					<div class="job">
-						<img src="../img/skills.png" alt=" " class="skills-img">
+						<img src="../img/skills.PNG" alt=" " class="skills-img">
 					</div>
 					<h4> Download a PDF of my resume
 						<a style="color: #668FAB" target="_blank" href="../img/EibergenResume2017.pdf"> here</a>
