Added research and remote sensing project

--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
 				</h4>
 				<h4>
 					<strong class=recolor>GitHub:</strong>
-					 aeibergen
+					<a href="https://github.com/aeibergen">aeibergen</a>
 				</h4>
 		</div>
 		<div class="row">
