--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					<a href="projectpages/MoonMap.html" class="thumbnail">
 						<img src="img/MoonMap.png" class="img-fluid"  alt=" ">
 						  <div class="overlay">
-						    <div class="text">The Moon</div>
+						    <div class="text">The Moon Etymology</div>
 						  </div>
 					</a>
 				</div>
@@ -103,6 +103,24 @@
 					</a>
 				</div>
 				<div class="col-md-4 hovereffect"> <!--third container for map thumbnail-->
+					<a href="projectpages/CapstoneResearch.html" class="thumbnail">
+						<img src="img/CapstoneResearch.PNG" alt=" ">
+						<div class="overlay">
+								<div class="text">Capstone Research</div>
+							</div>
+					</a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4 hovereffect"> <!--third container for map thumbnail-->
+					<a href="projectpages/RemoteSensing.html" class="thumbnail">
+						<img src="img/RemoteSensing.png" alt=" ">
+						<div class="overlay">
+								<div class="text">Remote Sensing Supervised Classification</div>
+							</div>
+					</a>
+				</div>
+				<div class="col-md-4 hovereffect"> <!--third container for map thumbnail-->
 					<a href="projectpages/InternetUse.html" class="thumbnail">
 						<img src="img/InternetThumb.PNG" alt=" ">
 						<div class="overlay">
@@ -110,8 +128,6 @@
 							</div>
 					</a>
 				</div>
-			</div>
-			<div class="row">
 				<div class="col-md-4 hovereffect"> <!--third container for map thumbnail-->
 					<a href="projectpages/BiodiversityAtlas.html" class="thumbnail">
 						<img src="img/BiodiversityThumb.PNG" alt=" ">
@@ -119,7 +135,9 @@
 					    	<div class="text">World Biodiversity Atlas</div>
 					  	</div>
 					</a>
-				</div>
+				</div>sssss
+			</div>
+		<div class="row">
 				<div class="col-md-4 hovereffect"> <!--third container for map thumbnail-->
 					<a href="projectpages/TurkeyProduction.html" class="thumbnail">
 						<img src="img/TurkeyThumb.png" alt=" ">
@@ -128,7 +146,7 @@
 					  	</div>
 					</a>
 				</div>
-			</div>
+			<div>
 		</div>
 
 		<!--put your initial page content here-->
