--- a/projectpages/CapstoneResearch.html
+++ b/projectpages/CapstoneResearch.html
@@ -7,7 +7,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<title>Rape Culture in the Last Frontier</title>
+		<title>Capstone Research</title>
 
 		<!--put your external stylesheet links here-->
 		<link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -56,10 +56,11 @@
     <!--thumbnails start here-->
     <div class="container">
 	    <div class="col-md-10 main">
-	    	<h2>Rape Culture in the Last Frontier</h2>
-	    	<p class="indent">A few years ago I read an article in <i>The Atlantic</i> about rape culture in the Alaskan wilderness. Recently, I became curious about if there had been any changes in the gender dynamics and sexual assault rates in Alaska. I was dismayed when I looked at the new 2015 data from the <a href="https://www.uaa.alaska.edu/academics/college-of-health/departments/justice-center/research/alaska-victimization-survey/anchorage.cshtml">Alaska Victimization Survey</a> and found that while rates of sexual assault and violence had decreased, they were still much higher than the rest of the nation. This is my attempt to shed light on this pervasive problem.</p>
-	    	<img src="../img/Infographic.png" alt="Rape Culture in the Last Frontier" class="img-responsive center">
-	    	<h3>View full infographic <a target="_blank" href="../img/Infographic.png">here</a></h3>
+	    	<h2>Perceptions and Possibilities: Renewable Energy on the UW-Madison Campus</h2>
+	    	<h4>Capstone research project conducted by Ally Burg, Andrea Eibergen, Jordan Hersh, and Suzie Kazar<br/></h4>
+	    	<p class="indent"><strong>Abstract</strong><br/>This study examined the perceptions and possibilities of future renewable energy utilization on the University of Wisconsin-Madison campus to determine the realistic future of implementation. We accomplished this through GIS site suitability analysis, a survey of UW-Madison students, and interviews with UW-Madison professionals and experts on renewable energy. Renewable energy on campus is not ideal due to lack of space and varying complexities with campus infrastructure, administrative politics, and economic considerations. However, strong support for renewable energy from students demonstrates the interest for UW-Madison to source its energy responsibly. Information gathered from our interviews suggests that an off-campus investment is one of the best paths to clean energy. The University administration should further their own interest in renewable energy, as well as considering energy conservation and efficiency.<br/><br/> Below is an example of one of the maps produced from our site suitability analysis for an anaerobic digester on the UW-Madison Campus.</p>
+	    	<img src="../img/CapstoneBioenergy.png" alt="Analysis Result Example" class="img-responsive center">
+	    	<h3>View the clickable full research paper <a target="_blank" href="../img/CapstoneFinalPaper.pdf">here</a> (Please be warned that this paper is 95 pages long and may take a bit to load.)</h3>
 	    </div>
 	</div>
 
