--- a/projectpages/EuropePolitical.html
+++ b/projectpages/EuropePolitical.html
@@ -56,7 +56,7 @@
     <div class="container">
 	    <div class="col-md-8 main">
 	    	<h2>Europe Political Map</h2>
-	    	<p>This is one of the first maps I ever made for the first cartography class I ever took.</p>
+	    	<p class="indent">This is one of the first maps I ever made for the first cartography class I ever took.</p>
 	    	<img src="../img/Europe.png" alt="Europe Political Map" class="img-responsive center">
 	    	<h3>View full map <a target="_blank" href="../img/Europe.png">here</a></h3>
 	    </div>
@@ -78,7 +78,7 @@
 										</h4>
 										<h4 class="blues">
 											<strong>GitHub:</strong>
-											 aeibergen
+											 <a href="https://github.com/aeibergen">aeibergen</a>
 										</h4>
 									</div>
 		            </div>
