--- a/projectpages/InternetUse.html
+++ b/projectpages/InternetUse.html
@@ -55,7 +55,7 @@
     <!--website parts-->
     <div class="container">
     	<h2>Internet Use from 1980 to 2015</h2>
-    	<p>
+    	<p class="indent">
     		<em> Tools:</em>
     		" JavaScript, Leaflet, HTML, CSS"
     	</p>
@@ -85,7 +85,7 @@
 										</h4>
 										<h4 class="blues">
 											<strong>GitHub:</strong>
-											 aeibergen
+											 <a href="https://github.com/aeibergen">aeibergen</a>
 										</h4>
 									</div>
 		            </div>
