--- a/projectpages/MoonMap.html
+++ b/projectpages/MoonMap.html
@@ -56,7 +56,7 @@
     <div class="container">
 	    <div class="col-md-10 main">
 	    	<h2>Moon Map</h2>
-	    	<p>I used this map as a means of exploring multiple styles within the same map. To begin, I created custom Tanaka contour lines and contour shading. Further, it is informed stylistically by the Georgian and Regency periods. The labelling reflects both the given name of each geographic feature as well as the inspiration behind the name - scientests, benefactors, and scholars. </p>
+	    	<p class="indent">I used this map as a means of exploring multiple styles within the same map. To begin, I created custom Tanaka contour lines and contour shading. Further, it is informed stylistically by the Georgian and Regency periods. The labelling reflects both the given name of each geographic feature as well as the inspiration behind the name - scientests, benefactors, and scholars.</p>
 	    	<img src="../img/MoonFinal.png" alt=" " class="img-responsive center">
 	    	<h3>View full map <a target="_blank" href="../img/MoonFinal.png">here</a></h3>
 	    </div>
@@ -78,7 +78,7 @@
 										</h4>
 										<h4 class="blues">
 											<strong>GitHub:</strong>
-											 aeibergen
+											 <a href="https://github.com/aeibergen">aeibergen</a>
 										</h4>
 									</div>
 		            </div>
