--- a/projectpages/RemoteSensing.html
+++ b/projectpages/RemoteSensing.html
@@ -7,7 +7,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<title>Turkey Production</title>
+		<title>Remote Sensing</title>
 
 		<!--put your external stylesheet links here-->
 		<link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -52,41 +52,44 @@
 			</div> <!-- end .container -->
 		</nav> <!-- end navigation bar -->
 
-		<div class="container">
+    <!--thumbnails start here-->
+    <!--thumbnails start here-->
+    <div class="container">
 	    <div class="col-md-10 main">
-	    	<h2>Turkey Production in the US</h2>
-	    	<p class="indent"> While gobbling up a plate of leftover turkey over after one Thanksgiving break, I began wondering where all this turkey came from. I found the answer via this visualization of turkey production in the United States.</p>
-	    	<img src="../img/turkeywip.png" alt="Turkey Production" class="img-responsive center">
-	    	<h3>View full map <a target="_blank" href="../img/turkeywip.png">here</a></h3>
+	    	<h2>Remote Sensing: Land Cover Supervised Classification</h2>
+	    	<p class="indent"> This report covers the details of a Support Vector Machine supervised classification that I performed for the greater Madison, WI area using medium resolution satellite imagery.</p>
+	    	<h3>View the full lab report <a target="_blank" href="../img/CapstoneFinalPaper.pdf">here</a></h3>
 	    </div>
 	</div>
 
-	<!--Footer-->
-	<footer class="page-footer">
-	    <!--Footer Links-->
-	    <div class="container-fluid">
-	        <div class="row">
-	            <!--First column-->
-	            <div class="col-md-6">
-	                <h3 class="blues">Contact me:</h3>
-									<div class="foot">
-									<h4 class="blues">
-										<strong>Email:</strong>
-										 aeibergen@wisc.edu
-									</h4>
-									<h4 class="blues">
-										<strong>GitHub:</strong>
-										<a href="https://github.com/aeibergen">aeibergen</a>
-									</h4>
-								</div>
-	            </div>
-	            <!--/.First column-->
-	        </div>
-	    </div>
-	    <!--/.Footer Links-->
-	</footer>
-	<!--/.Footer-->
+<!--Footer-->
+<footer class="page-footer">
+    <!--Footer Links-->
+    <div class="container-fluid">
+        <div class="row">
+            <!--First column-->
+            <div class="col-md-6">
+                <h3 class="blues">Contact me:</h3>
+								<div class="foot">
+								<h4 class="blues">
+									<strong>Email:</strong>
+									 aeibergen@wisc.edu
+								</h4>
+								<h4 class="blues">
+									<strong>GitHub:</strong>
+									 <a href="https://github.com/aeibergen">aeibergen</a>
+								</h4>
+							</div>
+            </div>
+            <!--/.First column-->
+        </div>
+    </div>
+    <!--/.Footer Links-->
+</footer>
+<!--/.Footer-->
 
+    <!--thumbnails end here-->
+    <!--thumbnails end here-->
 
 		<!--put your external script links here-->
     <script type="text/javascript" src="../lib/jquery-3.2.1.min.js"></script>
