--- a/projectpages/ScandinaviaBikeTour.html
+++ b/projectpages/ScandinaviaBikeTour.html
@@ -56,7 +56,7 @@
     <div class="container">
 	    <div class="col-md-10 main">
 	    	<h2>Scandinavian Bike Tour</h2>
-	    	<p>This is a map of a theoretical "Tour de France"-style bike tour through Scandinavia. Through the creation of this map, I explored how to create a realistic terrain map, as well as how to deal with high information density. I created a shaded relief in arcmap using a 15 arc minute DEM from "<a href="http://viewfinderpanoramas.org">Viewfinder Panoramas</a>". I then draped landcover data from the "<a href="http://www.fao.org/geonetwork/srv/en/main.home">FAO</a>". The hillshade and landcover was smoothed and colored in Photoshop, while the bathymetry was edited in Illustrator. The bike route was generated using Google My Maps and imported to ArcMap as a KML. All other data is from Natural Earth. The vector and raster layers were combined in Illustrator, where the logo was also created.</p>
+	    	<p class="indent">This is a map of a theoretical "Tour de France"-style bike tour through Scandinavia. Through the creation of this map, I explored how to create a realistic terrain map, as well as how to deal with high information density. I created a shaded relief in arcmap using a 15 arc minute DEM from "<a href="http://viewfinderpanoramas.org">Viewfinder Panoramas</a>". I then draped landcover data from the "<a href="http://www.fao.org/geonetwork/srv/en/main.home">FAO</a>". The hillshade and landcover was smoothed and colored in Photoshop, while the bathymetry was edited in Illustrator. The bike route was generated using Google My Maps and imported to ArcMap as a KML. All other data is from Natural Earth. The vector and raster layers were combined in Illustrator, where the logo was also created.</p>
 	    	<img src="../img/EibergenLab2copy.png" alt="Scandinavian Bike Tour" class="img-responsive center">
 	    	<h3>View full map <a target="_blank" href="../img/EibergenLab2copy.png">here</a></h3>
 	    </div>
@@ -78,7 +78,7 @@
 										</h4>
 										<h4 class="blues">
 											<strong>GitHub:</strong>
-											 aeibergen
+											 <a href="https://github.com/aeibergen">aeibergen</a>
 										</h4>
 									</div>
 		            </div>
