--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
 						  </div>
 					</a>
 				</div>
-
 				<div class="col-md-4 hovereffect"> <!--third container for map thumbnail-->
 					<a href="projectpages/AlaskaInfographic.html" class="thumbnail">
 						<img src="img/AlaskaThumb.png" alt=" ">
@@ -146,7 +145,7 @@
 					  	</div>
 					</a>
 				</div>
-			<div>
+			</div>
 		</div>
 
 		<!--put your initial page content here-->
