--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 					    	<div class="text">World Biodiversity Atlas</div>
 					  	</div>
 					</a>
-				</div>sssss
+				</div>
 			</div>
 		<div class="row">
 				<div class="col-md-4 hovereffect"> <!--third container for map thumbnail-->
