--- a/projectpages/RemoteSensing.html
+++ b/projectpages/RemoteSensing.html
@@ -58,7 +58,7 @@
 	    <div class="col-md-10 main">
 	    	<h2>Remote Sensing: Land Cover Supervised Classification</h2>
 	    	<p class="indent"> This report covers the details of a Support Vector Machine supervised classification that I performed for the greater Madison, WI area using medium resolution satellite imagery.</p>
-	    	<h3>View the full lab report <a target="_blank" href="../img/CapstoneFinalPaper.pdf">here</a></h3>
+	    	<h3>View the full lab report <a target="_blank" href="../img/RemoteSensingLab.pdf">here</a></h3>
 	    </div>
 	</div>
 
