--- a/resume.html
+++ b/resume.html
@@ -53,33 +53,35 @@
 				<div class="col-md-8">
 					<h3 class="resume">
 						<b>Experience</b></h3>
+					<h4><b>GIS Intern</b></h4>
+					<div class="job">
+						<p>TDS Telecom, Madison, WI</p>
+						<p class=italics>May 2018 - Present</p>
+						<p>Job Responsibilities:<br>Perform advanced spatial analysis to assist in fiber route creation <br>Analyze, correlate, and classify data to fit TDS schema</p>
+					</div>
 					<h4><b>Student GIS Developer</b></h4>
 					<div class="job">
-						<p>State Cartographer's Office, Science Hall, Madison, WI</p>
-						<p class=italics>November 2017-present</p>
-						<p>Job Responsibilities:<br>Creating interactive maps using Javascript, HTML, and CSS <br>Processing Geospatial data</p>
+						<p>State Cartographer's Office, Madison, WI</p>
+						<p class=italics>November 2017 - August 2018</p>
+						<p>Job Responsibilities:<br>Researched and developed advanced spatial analysis workflows <br>Processed geospatial data </p>
 					</div>
 					<h4><b>Science Hall Help Desk</b></h4>
 					<div class="job">
 						<p>University of Wisconsin-Madison Science Hall, Madison, WI</p>
-						<p class=italics>October 2016-October 2017</p>
-						<p>Maintaining computer systems for UW Geography Department and Nelson Institute for Environmental Studies<br>Provide technical support and troubleshooting
+						<p class=italics>October 2016 - October 2017</p>
+						<p>Maintained computer systems for UW Geography Department and Nelson Institute for Environmental Studies<br>Provided technical support and troubleshooting
 						</p>
 					</div>
 					<h4><b>GIS Intern</b></h4>
 					<div class="job">
-						<p>Rusk County Department of Survey and Land Information</p>
-						<p class=italics>May 2017-October 2017</p>
-						<p>Using ESRI ArcMap desktop and online software to create maps for various county organizations<br>Creating shapefiles by using ArcGIS Collector app and Trimble GPS Receiver Unit
+						<p>Rusk County Department of Survey and Land Information, Rusk County</p>
+						<p class=italics>May 2017 - October 2017</p>
+						<p>Consolidated and normalized data to create maps for various county organizations <br> Automated workflows with Python scripts <br>Collected data with ArcGIS collector app and Trimble GPS receiver
 						</p>
 					</div>
 					<h3 class="resume"><b>Education</b></h3>
 					<div class="job">
 						<p>University of Wisconsin–Madison, Madison, WI<br>Expected Graduation 2019<br>GPA 3.6</p>
-					</div>
-					<h3 class="resume"><b>Skills</b></h3>
-					<div class="job">
-						<img src="../img/skills.PNG" alt=" " class="skills-img">
 					</div>
 					<h4> Download a PDF of my resume
 						<a style="color: #668FAB" target="_blank" href="../img/EibergenResume2018.pdf"> here</a>
